@@ -1,5 +1,7 @@
 package gov.nih.nci.evs.api.fhir.R4;
 
+import static gov.nih.nci.evs.api.service.ElasticSearchServiceImpl.escape;
+
 import ca.uhn.fhir.jpa.model.util.JpaConstants;
 import ca.uhn.fhir.model.api.annotation.Description;
 import ca.uhn.fhir.rest.annotation.IdParam;
@@ -16,20 +18,22 @@ import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
 import gov.nih.nci.evs.api.model.Concept;
 import gov.nih.nci.evs.api.model.IncludeParam;
+import gov.nih.nci.evs.api.model.Mapping;
+import gov.nih.nci.evs.api.model.MappingResultList;
 import gov.nih.nci.evs.api.model.Property;
+import gov.nih.nci.evs.api.model.SearchCriteria;
 import gov.nih.nci.evs.api.service.ElasticQueryService;
+import gov.nih.nci.evs.api.service.ElasticSearchService;
+import gov.nih.nci.evs.api.util.ConceptUtils;
 import gov.nih.nci.evs.api.util.FHIRServerResponseException;
 import gov.nih.nci.evs.api.util.FhirUtility;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.hl7.fhir.r4.model.BooleanType;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.CodeType;
-import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.ConceptMap;
 import org.hl7.fhir.r4.model.IdType;
@@ -53,6 +57,9 @@ public class ConceptMapProviderR4 implements IResourceProvider {
   /** the query service. */
   @Autowired ElasticQueryService esQueryService;
 
+  /** the elastic search service. */
+  @Autowired ElasticSearchService esSearchService;
+
   /** The code to translate. */
   String codeToTranslate = "";
 
@@ -65,20 +72,24 @@ public class ConceptMapProviderR4 implements IResourceProvider {
    * @param response the response
    * @param details the details
    * @param id the id
-   * @param url the url
-   * @param conceptMap the concept map
-   * @param conceptMapVersion the concept map version
-   * @param code the code
-   * @param system the system
-   * @param version the version
-   * @param source the source
-   * @param coding the coding
-   * @param codeableConcept the codeable concept
-   * @param target the target
-   * @param targetsystem the targetsystem
-   * @param dependency_element the dependency element
-   * @param dependency_concept the dependency concept
-   * @param reverse the reverse
+   * @param url A canonical URL for a concept map. The server must know the concept map (
+   * @param conceptMap the concept map, The concept map is provided directly as part of the request.
+   *     Servers may choose not to accept concept maps in this fashion.
+   * @param conceptMapVersion The identifier that is used to identify a specific version of the
+   *     concept map to be used for the translation.
+   * @param code The code that is to be translated. If a code is provided, a system must be provided
+   * @param system The system for the code that is to be translated
+   * @param version The version of the system, if one was provided in the source data
+   * @param source Identifies the value set used when the concept (system/code pair) was chosen.
+   *     Optional because user may not always know it
+   * @param coding A coding to translate
+   * @param codeableConcept A full codeableConcept to validate.
+   * @param target Identifies the value set in which a translation is sought. If there's no target
+   *     specified, the server should return all known translations, along with their source
+   * @param targetSystem identifies a target code system in which a mapping is sought. This
+   *     parameter is an alternative to the target parameter.
+   * @param dependency the element for the dependency, may help produce the correct mapping
+   * @param reverse This parameter reverses the meaning of the source and target parameters
    * @return the parameters
    * @throws Exception the exception
    *     <p>no support for dependency parameter
@@ -90,18 +101,17 @@ public class ConceptMapProviderR4 implements IResourceProvider {
       final ServletRequestDetails details,
       @IdParam final IdType id,
       @OperationParam(name = "url") final UriType url,
-      @OperationParam(name = "conceptMap") final ConceptMap conceptMap,
+      //      @OperationParam(name = "conceptMap") final ConceptMap conceptMap,
       @OperationParam(name = "conceptMapVersion") final StringType conceptMapVersion,
       @OperationParam(name = "code") final CodeType code,
       @OperationParam(name = "system") final UriType system,
       @OperationParam(name = "version") final StringType version,
       @OperationParam(name = "source") final UriType source,
-      @OperationParam(name = "coding") final Coding coding,
-      @OperationParam(name = "codeableConcept") final CodeableConcept codeableConcept,
+      //      @OperationParam(name = "coding") final Coding coding,
+      //      @OperationParam(name = "codeableConcept") final CodeableConcept codeableConcept,
       @OperationParam(name = "target") final UriType target,
-      @OperationParam(name = "targetsystem") final UriType targetsystem,
-      @OperationParam(name = "dependency.element") final UriType dependency_element,
-      @OperationParam(name = "dependency.concept") final CodeableConcept dependency_concept,
+      @OperationParam(name = "targetSystem") final UriType targetSystem,
+      //      @OperationParam(name = "dependency") final UriType dependency,
       @OperationParam(name = "reverse", type = BooleanType.class) final BooleanType reverse)
       throws Exception {
     // check if request is a post, throw exception as we don't support post calls
@@ -112,73 +122,49 @@ public class ConceptMapProviderR4 implements IResourceProvider {
           405);
     }
     try {
-      FhirUtilityR4.required("code", code);
-      FhirUtilityR4.notSupported("conceptMap", conceptMap);
-      FhirUtilityR4.notSupported("conceptMapVersion", conceptMapVersion);
-      FhirUtilityR4.notSupported("coding", coding);
-      FhirUtilityR4.notSupported("codeableConcept", codeableConcept);
-      FhirUtilityR4.notSupported("targetsystem", targetsystem);
-      FhirUtilityR4.notSupported("dependency_element", dependency_element);
-      FhirUtilityR4.notSupported("dependency_concept", dependency_concept);
-      codeToTranslate = code.getCode().toLowerCase();
+      FhirUtilityR4.mutuallyRequired("code", code, "system", system);
+      FhirUtilityR4.mutuallyExclusive("target", target, "targetSystem", targetSystem);
+
       final Parameters params = new Parameters();
       final List<ConceptMap> cm =
-          findPossibleConceptMaps(id, null, system, url, version, source, target);
-      for (final ConceptMap mapping : cm) {
-        final List<gov.nih.nci.evs.api.model.ConceptMap> maps =
-            esQueryService.getMapset(mapping.getTitle(), new IncludeParam("maps")).get(0).getMaps();
-        List<gov.nih.nci.evs.api.model.ConceptMap> filteredMaps = new ArrayList<>();
-        if (reverse != null && reverse.getValue()) {
-          filteredMaps =
-              maps.stream()
-                  .filter(
-                      m ->
-                          m.getTargetCode().toLowerCase().contains(codeToTranslate)
-                              || m.getTargetName()
-                                  .toLowerCase()
-                                  .matches("^" + Pattern.quote(codeToTranslate) + ".*")
-                              || m.getTargetName()
-                                  .toLowerCase()
-                                  .matches(".*\\b" + Pattern.quote(codeToTranslate) + ".*"))
-                  .collect(Collectors.toList());
-        } else {
-          filteredMaps =
-              maps.stream()
-                  .filter(
-                      m ->
-                          m.getSourceCode().toLowerCase().contains(codeToTranslate)
-                              || m.getSourceName()
-                                  .toLowerCase()
-                                  .matches("^" + Pattern.quote(codeToTranslate) + ".*")
-                              || m.getSourceName()
-                                  .toLowerCase()
-                                  .matches(".*\\b" + Pattern.quote(codeToTranslate) + ".*"))
-                  .collect(Collectors.toList());
-        }
+          findPossibleConceptMaps(null, null, system, url, version, source, target, targetSystem);
+      // Extract the mapsetcode from cm build the query
+      final List<String> mapsetCodes = cm.stream().map(m -> m.getTitle()).toList();
 
-        if (!filteredMaps.isEmpty()) {
-          final gov.nih.nci.evs.api.model.ConceptMap map = filteredMaps.get(0);
-          params.addParameter("result", true);
-          final Parameters.ParametersParameterComponent property =
-              new Parameters.ParametersParameterComponent().setName("match");
-          property.addPart().setName("equivalence").setValue(new StringType("equivalent"));
-          if (reverse != null && reverse.getValue()) {
-            property
-                .addPart()
-                .setName("concept")
-                .setValue(
-                    new Coding(
-                        map.getSourceTerminology(), map.getSourceCode(), map.getSourceName()));
-          } else {
-            property
-                .addPart()
-                .setName("concept")
-                .setValue(
-                    new Coding(
-                        map.getTargetTerminology(), map.getTargetCode(), map.getTargetName()));
-          }
-          params.addParameter(property);
+      // Build a string query to search for the code/target
+      String query = buildFhirQueryString(code, mapsetCodes, reverse, "AND");
+      logger.debug("   Fhir query string = " + query);
+
+      MappingResultList maps;
+
+      SearchCriteria criteria = new SearchCriteria();
+      // Set as high as we can, should not be more than 10000 in reality.
+      criteria.setPageSize(10000);
+      criteria.setFromRecord(0);
+
+      maps = esSearchService.findConceptMappings(query, criteria);
+      final List<Mapping> conceptMaps = maps.getMaps();
+
+      if (!conceptMaps.isEmpty()) {
+        final Mapping map = conceptMaps.get(0);
+        params.addParameter("result", true);
+        final Parameters.ParametersParameterComponent property =
+            new Parameters.ParametersParameterComponent().setName("match");
+        property.addPart().setName("equivalence").setValue(new StringType("equivalent"));
+        if (reverse != null && reverse.getValue()) {
+          property
+              .addPart()
+              .setName("concept")
+              .setValue(
+                  new Coding(map.getSourceTerminology(), map.getSourceCode(), map.getSourceName()));
+        } else {
+          property
+              .addPart()
+              .setName("concept")
+              .setValue(
+                  new Coding(map.getTargetTerminology(), map.getTargetCode(), map.getTargetName()));
         }
+        params.addParameter(property);
       }
       if (!params.hasParameter()) {
         params.addParameter("result", false);
@@ -200,20 +186,24 @@ public class ConceptMapProviderR4 implements IResourceProvider {
    * @param request the request
    * @param response the response
    * @param details the details
-   * @param url the url
-   * @param conceptMap the concept map
-   * @param conceptMapVersion the concept map version
-   * @param code the code
-   * @param system the system
-   * @param version the version
-   * @param source the source
-   * @param coding the coding
-   * @param codeableConcept the codeable concept
-   * @param target the target
-   * @param targetsystem the targetsystem
-   * @param dependency_element the dependency element
-   * @param dependency_concept the dependency concept
-   * @param reverse the reverse
+   * @param url A canonical URL for a concept map. The server must know the concept map.
+   * @param conceptMap the concept map, The concept map is provided directly as part of the request.
+   *     Servers may choose not to accept concept maps in this fashion.
+   * @param conceptMapVersion The identifier that is used to identify a specific version of the
+   *     concept map to be used for the translation.
+   * @param code The code that is to be translated. If a code is provided, a system must be provided
+   * @param system The system for the code that is to be translated
+   * @param version The version of the system, if one was provided in the source data
+   * @param source Identifies the value set used when the concept (system/code pair) was chosen.
+   *     Optional because user may not always know it
+   * @param coding A coding to translate
+   * @param codeableConcept A full codeableConcept to validate.
+   * @param target Identifies the value set in which a translation is sought. If there's no target
+   *     specified, the server should return all known translations, along with their source
+   * @param targetSystem identifies a target code system in which a mapping is sought. This
+   *     parameter is an alternative to the target parameter.
+   * @param dependency the element for the dependency, may help produce the correct mapping
+   * @param reverse This parameter reverses the meaning of the source and target parameters
    * @return the parameters
    * @throws Exception the exception
    *     <p>no support for dependency parameter
@@ -226,18 +216,17 @@ public class ConceptMapProviderR4 implements IResourceProvider {
       final HttpServletResponse response,
       final ServletRequestDetails details,
       @OperationParam(name = "url") final UriType url,
-      @OperationParam(name = "conceptMap") final ConceptMap conceptMap,
+      //      @OperationParam(name = "conceptMap") final ConceptMap conceptMap,
       @OperationParam(name = "conceptMapVersion") final StringType conceptMapVersion,
       @OperationParam(name = "code") final CodeType code,
       @OperationParam(name = "system") final UriType system,
       @OperationParam(name = "version") final StringType version,
       @OperationParam(name = "source") final UriType source,
-      @OperationParam(name = "coding") final Coding coding,
-      @OperationParam(name = "codeableConcept") final CodeableConcept codeableConcept,
+      //      @OperationParam(name = "coding") final Coding coding,
+      //      @OperationParam(name = "codeableConcept") final CodeableConcept codeableConcept,
       @OperationParam(name = "target") final UriType target,
-      @OperationParam(name = "targetsystem") final UriType targetsystem,
-      @OperationParam(name = "dependency.element") final UriType dependency_element,
-      @OperationParam(name = "dependency.concept") final CodeableConcept dependency_concept,
+      @OperationParam(name = "targetSystem") final UriType targetSystem,
+      //      @OperationParam(name = "dependency") final UriType dependency,
       @OperationParam(name = "reverse", type = BooleanType.class) final BooleanType reverse)
       throws Exception {
     // check if request is a post, throw exception as we don't support post calls
@@ -248,74 +237,52 @@ public class ConceptMapProviderR4 implements IResourceProvider {
           405);
     }
     try {
-      FhirUtilityR4.required("code", code);
-      FhirUtilityR4.notSupported("conceptMap", conceptMap);
-      FhirUtilityR4.notSupported("conceptMapVersion", conceptMapVersion);
-      FhirUtilityR4.notSupported("coding", coding);
-      FhirUtilityR4.notSupported("codeableConcept", codeableConcept);
-      FhirUtilityR4.notSupported("targetsystem", targetsystem);
-      FhirUtilityR4.notSupported("dependency_element", dependency_element);
-      FhirUtilityR4.notSupported("dependency_concept", dependency_concept);
-      codeToTranslate = code.getCode().toLowerCase();
+      FhirUtilityR4.mutuallyRequired("code", code, "system", system);
+      FhirUtilityR4.mutuallyExclusive("target", target, "targetSystem", targetSystem);
+
       final Parameters params = new Parameters();
       final List<ConceptMap> cm =
-          findPossibleConceptMaps(null, null, system, url, version, source, target);
-      for (final ConceptMap mapping : cm) {
-        final List<gov.nih.nci.evs.api.model.ConceptMap> maps =
-            esQueryService.getMapset(mapping.getTitle(), new IncludeParam("maps")).get(0).getMaps();
-        List<gov.nih.nci.evs.api.model.ConceptMap> filteredMaps = new ArrayList<>();
+          findPossibleConceptMaps(null, null, system, url, version, source, target, targetSystem);
+      // Extract the mapsetcode from cm build the query
+      final List<String> mapsetCodes = cm.stream().map(m -> m.getTitle()).toList();
+
+      // Build a string query to search for the code/target
+      String query = buildFhirQueryString(code, mapsetCodes, reverse, "AND");
+      logger.debug("   Fhir query string = " + query);
+
+      //      final List<ConceptMap> cm =
+      //          findPossibleConceptMaps(null, null, system, url, version, source, target);
+      MappingResultList maps;
+
+      SearchCriteria criteria = new SearchCriteria();
+      // Set as high as we can, should not be more than 10000 in reality.
+      criteria.setPageSize(10000);
+      criteria.setFromRecord(0);
+
+      maps = esSearchService.findConceptMappings(query, criteria);
+      final List<Mapping> conceptMaps = maps.getMaps();
+
+      if (!conceptMaps.isEmpty()) {
+        final Mapping map = conceptMaps.get(0);
+        params.addParameter("result", true);
+        final Parameters.ParametersParameterComponent property =
+            new Parameters.ParametersParameterComponent().setName("match");
+        property.addPart().setName("equivalence").setValue(new StringType("equivalent"));
         if (reverse != null && reverse.getValue()) {
-          filteredMaps =
-              maps.stream()
-                  .filter(
-                      m ->
-                          m.getTargetCode().toLowerCase().contains(codeToTranslate)
-                              || m.getTargetName()
-                                  .toLowerCase()
-                                  .matches("^" + Pattern.quote(codeToTranslate) + ".*")
-                              || m.getTargetName()
-                                  .toLowerCase()
-                                  .matches(".*\\b" + Pattern.quote(codeToTranslate) + ".*"))
-                  .collect(Collectors.toList());
+          property
+              .addPart()
+              .setName("concept")
+              .setValue(
+                  new Coding(map.getSourceTerminology(), map.getSourceCode(), map.getSourceName()));
         } else {
-          filteredMaps =
-              maps.stream()
-                  .filter(
-                      m ->
-                          m.getSourceCode().toLowerCase().contains(codeToTranslate)
-                              || m.getSourceName()
-                                  .toLowerCase()
-                                  .matches("^" + Pattern.quote(codeToTranslate) + ".*")
-                              || m.getSourceName()
-                                  .toLowerCase()
-                                  .matches(".*\\b" + Pattern.quote(codeToTranslate) + ".*"))
-                  .collect(Collectors.toList());
+          property
+              .addPart()
+              .setName("concept")
+              .setValue(
+                  new Coding(map.getTargetTerminology(), map.getTargetCode(), map.getTargetName()));
         }
 
-        if (filteredMaps.size() > 0) {
-          final gov.nih.nci.evs.api.model.ConceptMap map = filteredMaps.get(0);
-          params.addParameter("result", true);
-          final Parameters.ParametersParameterComponent property =
-              new Parameters.ParametersParameterComponent().setName("match");
-          property.addPart().setName("equivalence").setValue(new StringType("equivalent"));
-          if (reverse != null && reverse.getValue()) {
-            property
-                .addPart()
-                .setName("concept")
-                .setValue(
-                    new Coding(
-                        map.getSourceTerminology(), map.getSourceCode(), map.getSourceName()));
-          } else {
-            property
-                .addPart()
-                .setName("concept")
-                .setValue(
-                    new Coding(
-                        map.getTargetTerminology(), map.getTargetCode(), map.getTargetName()));
-          }
-
-          params.addParameter(property);
-        }
+        params.addParameter(property);
       }
       if (!params.hasParameter()) {
         params.addParameter("result", false);
@@ -374,9 +341,7 @@ public class ConceptMapProviderR4 implements IResourceProvider {
       for (final Concept mapset : mapsets) {
         final List<Property> props = mapset.getProperties();
         if (props.stream()
-            .filter(m -> m.getType().equals("downloadOnly") && m.getValue().equals("true"))
-            .findAny()
-            .isPresent()) {
+            .anyMatch(m -> m.getType().equals("downloadOnly") && m.getValue().equals("true"))) {
           continue;
         }
         final ConceptMap cm = FhirUtilityR4.toR4(mapset);
@@ -430,13 +395,14 @@ public class ConceptMapProviderR4 implements IResourceProvider {
    * @throws Exception the exception
    */
   private List<ConceptMap> findPossibleConceptMaps(
-      @OptionalParam(name = "_id") final IdType id,
-      @OptionalParam(name = "date") final DateRangeParam date,
-      @OptionalParam(name = "system") final UriType system,
-      @OptionalParam(name = "url") final UriType url,
-      @OptionalParam(name = "version") final StringType version,
-      @OptionalParam(name = "version") final UriType source,
-      @OptionalParam(name = "version") final UriType target)
+      final IdType id,
+      final DateRangeParam date,
+      final UriType system,
+      final UriType url,
+      final StringType version,
+      final UriType source,
+      final UriType target,
+      final UriType targetSystem)
       throws Exception {
     try {
       //      FhirUtilityR4.notSupportedSearchParams(request);
@@ -452,9 +418,7 @@ public class ConceptMapProviderR4 implements IResourceProvider {
       for (final Concept mapset : mapsets) {
         final List<Property> props = mapset.getProperties();
         if (props.stream()
-            .filter(m -> m.getType().equals("downloadOnly") && m.getValue().equals("true"))
-            .findAny()
-            .isPresent()) {
+            .anyMatch(m -> m.getType().equals("downloadOnly") && m.getValue().equals("true"))) {
           continue;
         }
         final ConceptMap cm = FhirUtilityR4.toR4(mapset);
@@ -467,8 +431,13 @@ public class ConceptMapProviderR4 implements IResourceProvider {
           logger.info("  SKIP id mismatch = " + cm.getName());
           continue;
         }
-        if (system != null && !system.getValue().equals(cm.getName())) {
+        if (system != null && !system.getValue().equals(cm.getSourceUriType().getValue())) {
           logger.info("  SKIP system mismatch = " + cm.getName());
+          continue;
+        }
+        if (targetSystem != null
+            && !targetSystem.getValue().equals(cm.getTargetUriType().getValue())) {
+          logger.info("  SKIP targetSystem mismatch = " + cm.getName());
           continue;
         }
         if (date != null && !FhirUtility.compareDateRange(date, cm.getDate())) {
@@ -480,12 +449,12 @@ public class ConceptMapProviderR4 implements IResourceProvider {
           continue;
         }
         if (source != null
-            && !source.getValue().equals(cm.getGroup().get(0).getSourceElement().getValue())) {
+            && !source.getValue().equals(cm.getSourceUriType().getValue() + "?fhir_vs")) {
           logger.info("  SKIP source mismatch = " + cm.getVersion());
           continue;
         }
         if (target != null
-            && !target.getValue().equals(cm.getGroup().get(0).getTargetElement().getValue())) {
+            && !target.getValue().equals(cm.getTargetUriType().getValue() + "?fhir_vs")) {
           logger.info("  SKIP target mismatch = " + cm.getVersion());
           continue;
         }
@@ -516,7 +485,7 @@ public class ConceptMapProviderR4 implements IResourceProvider {
     try {
 
       final List<ConceptMap> candidates =
-          findPossibleConceptMaps(id, null, null, null, null, null, null);
+          findPossibleConceptMaps(id, null, null, null, null, null, null, null);
       for (final ConceptMap set : candidates) {
         if (id.getIdPart().equals(set.getId())) {
           return set;
@@ -534,6 +503,40 @@ public class ConceptMapProviderR4 implements IResourceProvider {
       logger.error("Unexpected exception", e);
       throw FhirUtilityR4.exception(
           "Failed to get concept map", OperationOutcome.IssueType.EXCEPTION, 500);
+    }
+  }
+
+  /**
+   * Helper method for building a FHIR query string. If the code is not null, it will return a query
+   *
+   * @param code the code being translated
+   * @param mapsetCodes target value set to be used for translations. Extracted from system uri
+   * @param operator the operator to use for the query
+   * @return
+   */
+  private String buildFhirQueryString(
+      CodeType code, List<String> mapsetCodes, BooleanType reverse, String operator)
+      throws Exception {
+    // Check the required parameter is provided
+    if (code == null) {
+      throw FhirUtilityR4.exception(
+          "Either code or target parameter is required", OperationOutcome.IssueType.REQUIRED, 400);
+    }
+    List<String> clauses = new ArrayList<>();
+    if (!mapsetCodes.isEmpty()) {
+      clauses.add(
+          "mapsetCode:("
+              + String.join(" ", mapsetCodes.stream().map(c -> escape(c)).toList())
+              + ")");
+    }
+    if (reverse != null && reverse.booleanValue()) {
+      // compose query string for source code and system uri
+      clauses.add("targetCode:\"" + escape(code.getValue()) + "\"");
+      return ConceptUtils.composeQuery(operator, clauses);
+    } else {
+      // compose query for target code
+      clauses.add("sourceCode:\"" + escape(code.getValue()) + "\"");
+      return ConceptUtils.composeQuery(operator, clauses);
     }
   }
 }
